tt2-traefik.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tt2-ingress
spec:
  backend:
    serviceName: tt2
    servicePort: 5000
